// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VolumeSize renders correctly with all props 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.emotion-0.emotion-0 {
  margin-bottom: 40px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-3.emotion-3 {
  margin-right: 16px;
  font-weight: 500;
}

.emotion-4 {
  margin-right: 5px;
}

.emotion-5 {
  font-weight: 800;
  color: #151a2d;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7 {
=======
.emotion-6 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  fill: #45d6b5;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7.emotion-7 {
  vertical-align: middle;
  margin-right: 8px;
}

.emotion-8 {
=======
.emotion-6.emotion-6 {
  margin-right: 8px;
}

.emotion-7 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7.emotion-7 {
  vertical-align: middle;
  margin-right: 8px;
}

.emotion-8 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-9 {
=======
.emotion-8 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-9 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-10 {
=======
.emotion-9 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-10 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #45d6b5;
  border-radius: 3px 0 0 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 68%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-11 {
=======
.emotion-10 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-11 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 10%;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-12 {
=======
.emotion-11 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-12 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-13 {
  text-align: left;
}

.emotion-15 {
=======
.emotion-12 {
  text-align: left;
}

.emotion-14 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-13 {
  text-align: left;
}

.emotion-15 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-16 {
=======
.emotion-15 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-16 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  right: 10%;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-17 {
=======
.emotion-16 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-17 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  right: 0;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-18 {
=======
.emotion-17 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-18 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  text-align: right;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4"
        >
          Test
        </span>
        <span
          class="emotion-5"
        >
          15 GB
        </span>
      </p>
      <svg
<<<<<<< HEAD
<<<<<<< HEAD
        class="sc-ui-icon emotion-6 emotion-7"
=======
        class="sc-ui-icon emotion-6"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="sc-ui-icon emotion-6 emotion-7"
>>>>>>> refactor: migrate colors from theme in icon (#160)
        viewBox="0 0 24 24"
      >
        <path
          d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2,4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-8"
    >
      <div
        class="emotion-9"
      >
        <span
          class="emotion-10"
        />
      </div>
      <div
        class="emotion-11"
      >
        <div
          class="emotion-12"
        >
          <div
            class="emotion-13"
=======
      class="emotion-7"
=======
      class="emotion-8"
>>>>>>> refactor: migrate colors from theme in icon (#160)
    >
      <div
        class="emotion-9"
      >
        <span
          class="emotion-10"
        />
      </div>
      <div
        class="emotion-11"
      >
        <div
          class="emotion-12"
        >
          <div
<<<<<<< HEAD
            class="emotion-12"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-13"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            0 GB
          </div>
          <p
<<<<<<< HEAD
<<<<<<< HEAD
            class="emotion-2 emotion-15"
=======
            class="emotion-2 emotion-14"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-2 emotion-15"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            min
          </p>
        </div>
      </div>
      <div
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-16"
      >
        <div
          class="emotion-17"
        >
          <div
            class="emotion-18"
=======
        class="emotion-15"
=======
        class="emotion-16"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        <div
          class="emotion-17"
        >
          <div
<<<<<<< HEAD
            class="emotion-17"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-18"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            20 GB
          </div>
          <p
<<<<<<< HEAD
<<<<<<< HEAD
            class="emotion-2 emotion-15"
=======
            class="emotion-2 emotion-14"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-2 emotion-15"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            max
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize renders correctly with minimal props 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.emotion-0.emotion-0 {
  margin-bottom: 40px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-3.emotion-3 {
  margin-right: 16px;
  font-weight: 500;
}

.emotion-4 {
  margin-right: 5px;
}

.emotion-5 {
  font-weight: 800;
  color: #ff8c69;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7 {
=======
.emotion-6 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  fill: #ff8c69;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7.emotion-7 {
  vertical-align: middle;
  margin-right: 8px;
}

.emotion-9 {
=======
.emotion-6.emotion-6 {
  margin-right: 8px;
}

.emotion-8 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7.emotion-7 {
  vertical-align: middle;
  margin-right: 8px;
}

.emotion-9 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ff8c69;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-9.emotion-9 {
  color: #ff8c69;
}

.emotion-10 {
=======
.emotion-8.emotion-8 {
  color: #ff8c69;
}

.emotion-9 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-9.emotion-9 {
  color: #ff8c69;
}

.emotion-10 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-11 {
=======
.emotion-10 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-11 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-12 {
=======
.emotion-11 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-12 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #ff8c69;
  border-radius: 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 250%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-13 {
=======
.emotion-12 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-13 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-14 {
=======
.emotion-13 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-14 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-15 {
  text-align: left;
}

.emotion-17 {
=======
.emotion-14 {
  text-align: left;
}

.emotion-16 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-15 {
  text-align: left;
}

.emotion-17 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4"
        />
        <span
          class="emotion-5"
        >
          5 GB
        </span>
      </p>
      <svg
<<<<<<< HEAD
<<<<<<< HEAD
        class="sc-ui-icon emotion-6 emotion-7"
=======
        class="sc-ui-icon emotion-6"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="sc-ui-icon emotion-6 emotion-7"
>>>>>>> refactor: migrate colors from theme in icon (#160)
        viewBox="0 0 24 24"
      >
        <path
          d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
        />
      </svg>
      <p
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-2 emotion-9"
=======
        class="emotion-2 emotion-8"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="emotion-2 emotion-9"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Volume capacity exceeded
      </p>
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-10"
    >
      <div
        class="emotion-11"
      >
        <span
          class="emotion-12"
        />
      </div>
      <div
        class="emotion-13"
      >
        <div
          class="emotion-14"
        >
          <div
            class="emotion-15"
=======
      class="emotion-9"
=======
      class="emotion-10"
>>>>>>> refactor: migrate colors from theme in icon (#160)
    >
      <div
        class="emotion-11"
      >
        <span
          class="emotion-12"
        />
      </div>
      <div
        class="emotion-13"
      >
        <div
          class="emotion-14"
        >
          <div
<<<<<<< HEAD
            class="emotion-14"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-15"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            0 GB
          </div>
          <p
<<<<<<< HEAD
<<<<<<< HEAD
            class="emotion-2 emotion-17"
=======
            class="emotion-2 emotion-16"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-2 emotion-17"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            required
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize renders correctly without maxSize 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.emotion-0.emotion-0 {
  margin-bottom: 40px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-3.emotion-3 {
  margin-right: 16px;
  font-weight: 500;
}

.emotion-4 {
  margin-right: 5px;
}

.emotion-5 {
  font-weight: 800;
  color: #ff8c69;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7 {
=======
.emotion-6 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  fill: #ff8c69;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7.emotion-7 {
  vertical-align: middle;
  margin-right: 8px;
}

.emotion-9 {
=======
.emotion-6.emotion-6 {
  margin-right: 8px;
}

.emotion-8 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7.emotion-7 {
  vertical-align: middle;
  margin-right: 8px;
}

.emotion-9 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ff8c69;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-9.emotion-9 {
  color: #ff8c69;
}

.emotion-10 {
=======
.emotion-8.emotion-8 {
  color: #ff8c69;
}

.emotion-9 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-9.emotion-9 {
  color: #ff8c69;
}

.emotion-10 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-11 {
=======
.emotion-10 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-11 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-12 {
=======
.emotion-11 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-12 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #ff8c69;
  border-radius: 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 750%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-13 {
=======
.emotion-12 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-13 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-14 {
=======
.emotion-13 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-14 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-15 {
  text-align: left;
}

.emotion-17 {
=======
.emotion-14 {
  text-align: left;
}

.emotion-16 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-15 {
  text-align: left;
}

.emotion-17 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4"
        >
          Test
        </span>
        <span
          class="emotion-5"
        >
          15 GB
        </span>
      </p>
      <svg
<<<<<<< HEAD
<<<<<<< HEAD
        class="sc-ui-icon emotion-6 emotion-7"
=======
        class="sc-ui-icon emotion-6"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="sc-ui-icon emotion-6 emotion-7"
>>>>>>> refactor: migrate colors from theme in icon (#160)
        viewBox="0 0 24 24"
      >
        <path
          d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
        />
      </svg>
      <p
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-2 emotion-9"
=======
        class="emotion-2 emotion-8"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="emotion-2 emotion-9"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Test too big
      </p>
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-10"
    >
      <div
        class="emotion-11"
      >
        <span
          class="emotion-12"
        />
      </div>
      <div
        class="emotion-13"
      >
        <div
          class="emotion-14"
        >
          <div
            class="emotion-15"
=======
      class="emotion-9"
=======
      class="emotion-10"
>>>>>>> refactor: migrate colors from theme in icon (#160)
    >
      <div
        class="emotion-11"
      >
        <span
          class="emotion-12"
        />
      </div>
      <div
        class="emotion-13"
      >
        <div
          class="emotion-14"
        >
          <div
<<<<<<< HEAD
            class="emotion-14"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-15"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            0 GB
          </div>
          <p
<<<<<<< HEAD
<<<<<<< HEAD
            class="emotion-2 emotion-17"
=======
            class="emotion-2 emotion-16"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-2 emotion-17"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            required
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize should display too big error 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.emotion-0.emotion-0 {
  margin-bottom: 40px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-3.emotion-3 {
  margin-right: 16px;
  font-weight: 500;
}

.emotion-4 {
  margin-right: 5px;
}

.emotion-5 {
  font-weight: 800;
  color: #ff8c69;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7 {
=======
.emotion-6 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  fill: #ff8c69;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7.emotion-7 {
  vertical-align: middle;
  margin-right: 8px;
}

.emotion-9 {
=======
.emotion-6.emotion-6 {
  margin-right: 8px;
}

.emotion-8 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7.emotion-7 {
  vertical-align: middle;
  margin-right: 8px;
}

.emotion-9 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ff8c69;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-9.emotion-9 {
  color: #ff8c69;
}

.emotion-10 {
=======
.emotion-8.emotion-8 {
  color: #ff8c69;
}

.emotion-9 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-9.emotion-9 {
  color: #ff8c69;
}

.emotion-10 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-11 {
=======
.emotion-10 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-11 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-12 {
=======
.emotion-11 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-12 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #ff8c69;
  border-radius: 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 140%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-13 {
=======
.emotion-12 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-13 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 10%;
  -webkit-transform: translateX(0);
  -moz-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-14 {
=======
.emotion-13 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-14 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-15 {
  text-align: left;
}

.emotion-17 {
=======
.emotion-14 {
  text-align: left;
}

.emotion-16 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-15 {
  text-align: left;
}

.emotion-17 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-18 {
=======
.emotion-17 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-18 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  right: 10%;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-19 {
=======
.emotion-18 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-19 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  right: 0;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-20 {
=======
.emotion-19 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-20 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  text-align: right;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4"
        >
          Test
        </span>
        <span
          class="emotion-5"
        >
          25 GB
        </span>
      </p>
      <svg
<<<<<<< HEAD
<<<<<<< HEAD
        class="sc-ui-icon emotion-6 emotion-7"
=======
        class="sc-ui-icon emotion-6"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="sc-ui-icon emotion-6 emotion-7"
>>>>>>> refactor: migrate colors from theme in icon (#160)
        viewBox="0 0 24 24"
      >
        <path
          d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
        />
      </svg>
      <p
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-2 emotion-9"
=======
        class="emotion-2 emotion-8"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="emotion-2 emotion-9"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Test too big
      </p>
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-10"
    >
      <div
        class="emotion-11"
      >
        <span
          class="emotion-12"
        />
      </div>
      <div
        class="emotion-13"
      >
        <div
          class="emotion-14"
        >
          <div
            class="emotion-15"
=======
      class="emotion-9"
=======
      class="emotion-10"
>>>>>>> refactor: migrate colors from theme in icon (#160)
    >
      <div
        class="emotion-11"
      >
        <span
          class="emotion-12"
        />
      </div>
      <div
        class="emotion-13"
      >
        <div
          class="emotion-14"
        >
          <div
<<<<<<< HEAD
            class="emotion-14"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-15"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            0 GB
          </div>
          <p
<<<<<<< HEAD
<<<<<<< HEAD
            class="emotion-2 emotion-17"
=======
            class="emotion-2 emotion-16"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-2 emotion-17"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            minimum
          </p>
        </div>
      </div>
      <div
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-18"
      >
        <div
          class="emotion-19"
        >
          <div
            class="emotion-20"
=======
        class="emotion-17"
=======
        class="emotion-18"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        <div
          class="emotion-19"
        >
          <div
<<<<<<< HEAD
            class="emotion-19"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-20"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            20 GB
          </div>
          <p
<<<<<<< HEAD
<<<<<<< HEAD
            class="emotion-2 emotion-17"
=======
            class="emotion-2 emotion-16"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-2 emotion-17"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            maximum
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VolumeSize should display too small error 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

@keyframes animation-0 {
  0% {
    width: 0%;
  }

  50% {
    width: 0%;
  }

  100% {
    width: -100%;
  }
}

.emotion-0.emotion-0 {
  margin-bottom: 40px;
}

.emotion-1.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.emotion-3.emotion-3 {
  margin-right: 16px;
  font-weight: 500;
}

.emotion-4 {
  margin-right: 5px;
}

.emotion-5 {
  font-weight: 800;
  color: #ff8c69;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7 {
=======
.emotion-6 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  fill: #ff8c69;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-7.emotion-7 {
  vertical-align: middle;
  margin-right: 8px;
}

.emotion-9 {
=======
.emotion-6.emotion-6 {
  margin-right: 8px;
}

.emotion-8 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-7.emotion-7 {
  vertical-align: middle;
  margin-right: 8px;
}

.emotion-9 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #ff8c69;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-9.emotion-9 {
  color: #ff8c69;
}

.emotion-10 {
=======
.emotion-8.emotion-8 {
  color: #ff8c69;
}

.emotion-9 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-9.emotion-9 {
  color: #ff8c69;
}

.emotion-10 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 15px;
  width: 100%;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-11 {
=======
.emotion-10 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-11 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #eeeeff;
  border-radius: 3px;
  position: relative;
  height: 6px;
  width: 100%;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-12 {
=======
.emotion-11 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-12 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #ff8c69;
  border-radius: 3px 0 0 3px;
  position: absolute;
  left: 0;
  height: 100%;
  width: 37%;
  min-width: 0;
  max-width: 100%;
  -webkit-transition: width 1000ms ease;
  transition: width 1000ms ease;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-animation: animation-0 1.2s ease backwards;
  animation: animation-0 1.2s ease backwards;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-13 {
=======
.emotion-12 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-13 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #151a2d;
  position: absolute;
  height: 15px;
  width: 3px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-14 {
=======
.emotion-13 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-14 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
  font-weight: 500;
  line-height: 8px;
  position: absolute;
  top: 32px;
  left: 0;
}

<<<<<<< HEAD
<<<<<<< HEAD
.emotion-15 {
  text-align: left;
}

.emotion-17 {
=======
.emotion-14 {
  text-align: left;
}

.emotion-16 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
.emotion-15 {
  text-align: left;
}

.emotion-17 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <p
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4"
        >
          Test
        </span>
        <span
          class="emotion-5"
        >
          15 GB
        </span>
      </p>
      <svg
<<<<<<< HEAD
<<<<<<< HEAD
        class="sc-ui-icon emotion-6 emotion-7"
=======
        class="sc-ui-icon emotion-6"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="sc-ui-icon emotion-6 emotion-7"
>>>>>>> refactor: migrate colors from theme in icon (#160)
        viewBox="0 0 24 24"
      >
        <path
          d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
        />
      </svg>
      <p
<<<<<<< HEAD
<<<<<<< HEAD
        class="emotion-2 emotion-9"
=======
        class="emotion-2 emotion-8"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
        class="emotion-2 emotion-9"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Test too small
      </p>
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="emotion-10"
    >
      <div
        class="emotion-11"
      >
        <span
          class="emotion-12"
        />
      </div>
      <div
        class="emotion-13"
      >
        <div
          class="emotion-14"
        >
          <div
            class="emotion-15"
=======
      class="emotion-9"
=======
      class="emotion-10"
>>>>>>> refactor: migrate colors from theme in icon (#160)
    >
      <div
        class="emotion-11"
      >
        <span
          class="emotion-12"
        />
      </div>
      <div
        class="emotion-13"
      >
        <div
          class="emotion-14"
        >
          <div
<<<<<<< HEAD
            class="emotion-14"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-15"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            20 GB
          </div>
          <p
<<<<<<< HEAD
<<<<<<< HEAD
            class="emotion-2 emotion-17"
=======
            class="emotion-2 emotion-16"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
=======
            class="emotion-2 emotion-17"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          >
            required
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
